src/DslApi.h

#define DSL_CODEC_H264                                              0
#define DSL_CODEC_H265                                              1
#define DSL_CODEC_MPEG4                                             2
#define DSL_MUXER_MPEG4                                             0
#define DSL_MUXER_MK4                                               1
#define DSL_PAD_SINK                                                0
#define DSL_PAD_SRC                                                 1
#define DSL_RTP_TCP                                                 0x04
#define DSL_RTP_ALL                                                 0x07
typedef uint boolean;
/**
 * @brief callback typedef for a client batch meta handler function. Once added to a Component, 
 * the function will be called when the component receives a batch meta buffer.
 * @param[in] batch_meta pointer to a Batch Meta structure to process
 * @param[in] user_data opaque pointer to client's user data
 */
typedef boolean (*dsl_batch_meta_handler_cb)(void* batch_meta, void* user_data);
/**
 * @brief creates a new, uniquely named CSI Camera Source component
 * @param[in] name unique name for the new Source
 * @param[in] width width of the source in pixels
 * @param[in] height height of the source in pixels
 * @param[in] fps-n frames/second fraction numerator
 * @param[in] fps-d frames/second fraction denominator
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_SOURCE_RESULT otherwise.
 */
DslReturnType dsl_source_csi_new(const wchar_t* name,
    uint width, uint height, uint fps_n, uint fps_d);
/**
 * @brief creates a new, uniquely named URI Source component
 * @param[in] name Unique Resource Identifier (file or live)
 * @param[in] is_live true if source is live false if file
 * @param[in] cudadec_mem_type, use DSL_CUDADEC_MEMORY_TYPE_<type>
 * @param[in] 
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_SOURCE_RESULT otherwise.
 */
DslReturnType dsl_source_uri_new(const wchar_t* name, const wchar_t* uri, boolean is_live,
    uint cudadec_mem_type, uint intra_decode, uint drop_frame_interval);
/**
 * @brief creates a new, uniquely named RTSP Source component
 * @param[in] name Unique Resource Identifier (file or live)
 * @param[in] protocol one of the constant protocol values [ DSL_RTP_TCP | DSL_RTP_ALL ]
 * @param[in] cudadec_mem_type, use DSL_CUDADEC_MEMORY_TYPE_<type>
 * @param[in] 
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_SOURCE_RESULT otherwise.
 */
DslReturnType dsl_source_rtsp_new(const wchar_t* name, const wchar_t* uri, uint protocol,
    uint cudadec_mem_type, uint intra_decode, uint drop_frame_interval);
/**
 * @brief returns the frame rate of the name source as a fraction
 * Camera sources will return the value used on source creation
 * URL and RTPS sources will return 0 until prior entering a state of play
 * @param name unique name of the source to query
 * @param width of the source in pixels
 * @param height of the source in pixels
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_SOURCE_RESULT otherwise.
 */
DslReturnType dsl_source_dimensions_get(const wchar_t* name, uint* width, uint* height);
/**
 * @brief returns the frame rate of the named source as a fraction
 * Camera sources will return the value used on source creation
 * URL and RTPS sources will return 0 until prior entering a state of play
 * @param name unique name of the source to query
 * @param fps_n frames per second numerator
 * @param fps_d frames per second denominator
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_SOURCE_RESULT otherwise.
 */
DslReturnType dsl_source_frame_rate_get(const wchar_t* name, uint* fps_n, uint* fps_d);
/**
 * @brief adds a named Sink object to a named Source object
 * @param source name of the Source object update
 * @param sink name of the Sink object to add
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_SOURCE_RESULT otherwise.
 */
DslReturnType dsl_source_sink_add(const wchar_t* source, const wchar_t* sink);
/**
 * @brief removes a named Sink object from a named Source object
 * @param source name of the Source object update
 * @param sink name of the Sink object to add
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_SOURCE_RESULT otherwise.
 */
DslReturnType dsl_source_sink_remove(const wchar_t* source, const wchar_t* sink);
/**
 * @brief returns whether the source stream is live or not
 * @param name the name of Source component to query
 * @return True if the source's stream is live
 */
boolean dsl_source_is_live(const wchar_t* name);
/**
 * @brief returns the number of sources currently in use by 
 * all of the Pipelines in memeroy. 
 * @return number of Sources in use
 */
uint dsl_source_get_num_in_use();
  

/**
 * @brief Get the maximum number of in-memory sources 
 * that can be in use at any time. The maximum number is 
 * limited by Hardware, see dsl_source_set_num_in_use_max() 
 * @return the current max sources in use setting.
 */
uint dsl_source_get_num_in_use_max();
  

/**
 * @brief Sets the maximum number of in-memory sources 
 * that can be in use at any time. The function overrides 
 * the default value on first call. The maximum number is 
 * limited by Hardware. The caller must ensure to set the 
 * number correctly, based on the TEGRA platform in use.
 */
void dsl_source_set_num_in_use_max(uint max);
  

/**
 * @brief creates a new, uniquely named Primary GIE object
 * @param[in] name unique name for the new GIE object
 * @param[in] infer_config_file pathspec of the Infer Config file to use
 * @param[in] model_engine_file pathspec of the Model Engine file to use
 * @param[in] interval
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_GIE_RESULT otherwise.
 */
DslReturnType dsl_gie_primary_new(const wchar_t* name, const wchar_t* infer_config_file,
    const wchar_t* model_engine_file, uint interval);
/**
 * @brief Adds a batch meta handler callback function to be called to process each buffer.
 * A Primary GIE can have at most one Sink and Source batch meta handler each
 * @param name unique name of the Primary GIE to update
 * @param pad pad to add the handler to; DSL_PAD_SINK | DSL_PAD SRC
 * @param handler callback function to process batch meta data
 * @param user_data opaque pointer to clients user data passed in to each callback call.
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_GIE_RESULT otherwise
 */
DslReturnType dsl_gie_primary_batch_meta_handler_add(const wchar_t* name, uint type, 
    dsl_batch_meta_handler_cb handler, void* user_data);
/**
 * @brief Removes a batch meta handler callback function from the Primary GIE
 * @param name unique name of the Primary GIE to update
 * @param pad pad to remove the handler from; DSL_PAD_SINK | DSL_PAD SRC
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_GIE_RESULT otherwise
 */
DslReturnType dsl_gie_primary_batch_meta_handler_remove(const wchar_t* name, uint pad);
/**
 * @brief creates a new, uniquely named Secondary GIE object
 * @param[in] name unique name for the new GIE object
 * @param[in] infer_config_file pathspec of the Infer Config file to use
 * @param[in] model_engine_file pathspec of the Model Engine file to use
 * @param[in] infer_on_gie_name name of the Primary or Secondary GIE to infer on
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_GIE_RESULT otherwise.
 */
DslReturnType dsl_gie_secondary_new(const wchar_t* name, const wchar_t* infer_config_file,
    const wchar_t* model_engine_file, const wchar_t* infer_on_gie_name);
//
//DslReturnType dsl_gie_infer_config_file_get(const wchar_t* name, const wchar_t** infer_config_file);
//DslReturnType dsl_gie_infer_config_file_set(const wchar_t* name, const wchar_t* infer_config_file);
//
//DslReturnType dsl_gie_model_engine_file_get(const wchar_t* name, const wchar_t** model_engine_file);
//DslReturnType dsl_gie_model_engine_file_set(const wchar_t* name, const wchar_t* model_engine_file);
//
//DslReturnType dsl_gie_interval_get(const wchar_t* name, uint* interval);
//DslReturnType dsl_gie_interval_set(const wchar_t* name, uint interval);

/**
 * @brief creates a new, uniquely named KTL Tracker object
 * @param name unique name for the new Tracker
 * @param max_width maximum frame width of the input transform buffer
 * @param max_height maximum_frame height of the input tranform buffer
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_TRACKER_RESULT otherwise
 */
DslReturnType dsl_tracker_ktl_new(const wchar_t* name, uint max_width, uint max_height);
/**
 * @brief creates a new, uniquely named IOU Tracker object
 * @param name unique name for the new Tracker
 * @param config_file fully qualified pathspec to the IOU Lib config text file
 * @param max_width maximum frame width of the input transform buffer
 * @param max_height maximum_frame height of the input tranform buffer
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_TRACKER_RESULT otherwise
 */
DslReturnType dsl_tracker_iou_new(const wchar_t* name, const wchar_t* config_file, uint max_width, uint max_height);
/**
 * @brief returns the current maximum frame width and height settings for the named IOU Tracker object
 * @param name unique name of the Tracker to query
 * @param max_width maximum frame width of the input transform buffer
 * @param max_height maximum_frame height of the input tranform buffer
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_TRACKER_RESULT otherwise
 */
DslReturnType dsl_tracker_max_dimensions_get(const wchar_t* name, uint* max_width, uint* max_height);
/**
 * @brief sets the maximum frame width and height settings for the named IOU Tracker object
 * @param name unique name of the Tracker to update
 * @param max_width new maximum frame width of the input transform buffer
 * @param max_height new maximum_frame height of the input tranform buffer
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_TRACKER_RESULT otherwise
 */
DslReturnType dsl_tracker_max_dimensions_set(const wchar_t* name, uint max_width, uint max_height);
/**
 * @brief Add a batch meta handler callback function to be called to process each frame buffer.
 * A Tracker can have at most one Sink and Source batch meta handler each
 * @param name unique name of the Tracker to update
 * @param pad pad to add the handler to; DSL_PAD_SINK | DSL_PAD SRC
 * @param handler callback function to process batch meta data
 * @param user_data opaque pointer to clients user data passed in to each callback call.
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_TRACKER_RESULT otherwise
 */
DslReturnType dsl_tracker_batch_meta_handler_add(const wchar_t* name, uint pad, 
    dsl_batch_meta_handler_cb handler, void* user_data);
/**
 * @brief Removes a batch meta handler callback function from the Tracker
 * @param name unique name of the Tracker to update
 * @param pad pad to remove the handler from; DSL_PAD_SINK | DSL_PAD SRC
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_TRACKER_RESULT otherwise
 */
DslReturnType dsl_tracker_batch_meta_handler_remove(const wchar_t* name, uint pad);
/**
 * @brief creates a new, uniquely named OSD obj
 * @param[in] name unique name for the new Sink
 * @param[in] is_clock_enabled true if clock is visible
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_OSD_RESULT otherwise
 */
DslReturnType dsl_osd_new(const wchar_t* name, boolean is_clock_enabled);
/**
 * @brief Adds a batch meta handler callback function to be called to process each frame buffer.
 * An On-Screen-Display can have at most one Sink and Source batch meta handler each
 * @param name unique name of the OSD to update
 * @param pad pad to add the handler to; DSL_PAD_SINK | DSL_PAD SRC
 * @param handler callback function to process batch meta data
 * @param user_data opaque pointer to clients user data passed in to each callback call.
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_OSD_RESULT otherwise
 */
DslReturnType dsl_osd_batch_meta_handler_add(const wchar_t* name, uint type, 
    dsl_batch_meta_handler_cb handler, void* user_data);
/**
 * @brief Removes a batch meta handler callback function from the OSD
 * @param name unique name of the OSD to update
 * @param pad pad to remove the handler from; DSL_PAD_SINK | DSL_PAD SRC
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_OSD_RESULT otherwise
 */
DslReturnType dsl_osd_batch_meta_handler_remove(const wchar_t* name, uint pad);
/**
 * @brief creates a new, uniquely named Display obj
 * @param[in] name unique name for the new Display
 * @param[in] width width of the Display in pixels
 * @param[in] height height of the Display in pixels
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_TILER_RESULT
 */
DslReturnType dsl_tiler_new(const wchar_t* name, uint width, uint height);
/**
 * @brief creates a new, uniquely named Window Sink component
 * @param[in] name unique component name for the new Overlay Sink
 * @param[in] offsetX upper left corner offset in the X direction in pixels
 * @param[in] offsetY upper left corner offset in the Y direction in pixels
 * @param[in] width width of the Window Sink in pixels
 * @param[in] heigth height of the Window Sink in pixels
 * @return DSL_RESULT_SUCCESS on success, DSL_RESULT_SINK_RESULT
 */
DslReturnType dsl_sink_window_new(const wchar_t* name, 
    uint offsetX, uint offsetY, uint width, uint height);