dsl.py

from ctypes import *

_dsl = CDLL('dsl-lib.so')

DSL_RETURN_SUCCESS = 0

DSL_PAD_SINK = 0
DSL_PAD_SRC = 1

DSL_RTP_TCP = 4
DSL_RTP_ALL = 7

DSL_CODEC_H264 = 0
DSL_CODEC_H265 = 1
DSL_CODEC_MPEG4 = 2

DSL_MUXER_MPEG4 = 0
DSL_MUXER_MK4 = 1

##
## Pointer Typedefs
##
DSL_UINT_P = POINTER(c_uint)
DSL_BOOL_P = POINTER(c_bool)

##
## Callback Typedefs
##
DSL_META_BATCH_HANDLER = CFUNCTYPE(c_bool, c_void_p, c_void_p)
DSL_STATE_CHANGE_LISTENER = CFUNCTYPE(None, c_uint, c_uint, c_void_p)
DSL_EOS_LISTENER = CFUNCTYPE(None, c_void_p)
DSL_XWINDOW_KEY_EVENT_HANDLER = CFUNCTYPE(None, c_wchar_p, c_void_p)
DSL_XWINDOW_BUTTON_EVENT_HANDLER = CFUNCTYPE(None, c_uint, c_uint, c_void_p)
DSL_XWINDOW_DELETE_EVENT_HANDLER = CFUNCTYPE(None, c_void_p)

callbacks = []
##
## dsl_source_csi_new()
##
_dsl.dsl_source_csi_new.argtypes = [c_wchar_p, c_uint, c_uint, c_uint, c_uint]
_dsl.dsl_source_csi_new.restype = c_uint
def dsl_source_csi_new(name, width, height, fps_n, fps_d):
    global _dsl
    result =_dsl.dsl_source_csi_new(name, width, height, fps_n, fps_d)
    return int(result)
#print(dsl_source_csi_new("csi-source", 1280, 720, 30, 1))

##
## dsl_source_uri_new()
##
_dsl.dsl_source_uri_new.argtypes = [c_wchar_p, c_wchar_p, c_bool, c_uint, c_uint, c_uint]
_dsl.dsl_source_uri_new.restype = c_uint
def dsl_source_uri_new(name, uri, is_live, cudadec_mem_type, intra_decode, drop_frame_interval):
    global _dsl
    result = _dsl.dsl_source_uri_new(name, uri, is_live, cudadec_mem_type, intra_decode, drop_frame_interval)
    return int(result)
#print(dsl_source_uri_new("uri-source", "../../test/streams/sample_1080p_h264.mp4", false, 0, 0, 0))

##
## dsl_source_rtsp_new()
##
_dsl.dsl_source_rtsp_new.argtypes = [c_wchar_p, c_wchar_p, c_uint, c_uint, c_uint, c_uint]
_dsl.dsl_source_rtsp_new.restype = c_uint
def dsl_source_rtsp_new(name, uri, protocol, cudadec_mem_type, intra_decode, drop_frame_interval):
    global _dsl
    result = _dsl.dsl_source_rtsp_new(name, uri, protocol, cudadec_mem_type, intra_decode, drop_frame_interval)
    return int(result)
#print(dsl_source_uri_new("rtsp-source", "???????", DSL_RTP_ALL, 0, 0, 0))

##
## dsl_source_dimensions_get()
##
_dsl.dsl_source_dimensions_get.argtypes = [c_wchar_p, POINTER(c_uint), POINTER(c_uint)]
_dsl.dsl_source_dimensions_get.restype = c_uint
def dsl_source_dimensions_get(name):
    global _dsl
    width = c_uint(0)
    height = c_uint(0)
    result = _dsl.dsl_source_dimensions_get(name, DSL_UINT_P(width), DSL_UINT_P(height))
    return int(result), width.value, height.value 
#print(dsl_source_csi_new("csi-source", 1280, 720, 30, 1))
#print(dsl_source_dimensions_get("csi-source"))

##
## dsl_source_frame_rate_get()
##
_dsl.dsl_source_frame_rate_get.argtypes = [c_wchar_p, POINTER(c_uint), POINTER(c_uint)]
_dsl.dsl_source_frame_rate_get.restype = c_uint
def dsl_source_frame_rate_get(name):
    global _dsl
    fps_n = c_uint(0)
    fps_d = c_uint(0)
    result = _dsl.dsl_source_frame_rate_get(name, DSL_UINT_P(fps_n), DSL_UINT_P(fps_d))
    return int(result), fps_n.value, fps_d.value 
#print(dsl_source_csi_new("csi-source", 1280, 720, 30, 1))
#print(dsl_source_frame_rate_get("csi-source"))

##
## dsl_source_sink_add()
##
_dsl.dsl_source_sink_add.argtypes = [c_wchar_p, c_wchar_p]
_dsl.dsl_source_sink_add.restype = c_uint
def dsl_source_sink_add(source, sink):
    global _dsl
    result = _dsl.dsl_source_sink_add(source, sink)
    return int(result)
    
##
## dsl_source_sink_remove()
##
_dsl.dsl_source_sink_remove.argtypes = [c_wchar_p, c_wchar_p]
_dsl.dsl_source_sink_remove.restype = c_uint
def dsl_source_sink_remove(source, sink):
    global _dsl
    result = _dsl.dsl_source_sink_remove(source, sink)
    return int(result)
# *** move to end of file (below sink new) for testing    
#print(dsl_source_csi_new("csi-source", 1280, 720, 30, 1))
#print(dsl_sink_window_new("overlay-sink", 0, 0, 1280, 720))
#print(dsl_source_sink_add("csi-source", "overlay-sink"))
#print(dsl_source_sink_remove("csi-source", "overlay-sink"))

##
## dsl_source_is_live()
##
_dsl.dsl_source_is_live.argtypes = [c_wchar_p]
_dsl.dsl_source_is_live.restype = c_bool
def dsl_source_is_live(name):
    global _dsl
    result = _dsl.dsl_source_is_live(name)
    return bool(result)
#print(dsl_source_is_live("uri-source"))

##
## dsl_source_get_num_in_use()
##
_dsl.dsl_source_get_num_in_use.restype = c_uint
def dsl_source_get_num_in_use():
    global _dsl
    result = _dsl.dsl_source_get_num_in_use()
    return int(result)
#print(dsl_source_get_num_in_use())

##
## dsl_source_get_num_in_use_max()
##
_dsl.dsl_source_get_num_in_use_max.restype = c_uint
def dsl_source_get_num_in_use_max():
    global _dsl
    result = _dsl.dsl_source_get_num_in_use_max()
    return int(result)
#print(dsl_source_get_num_in_use_max())

##
## dsl_source_set_num_in_use_max()
##
_dsl.dsl_source_set_num_in_use_max.argtypes = [c_uint]
def dsl_source_set_num_in_use_max(max):
    global _dsl
    result = _dsl.dsl_source_set_num_in_use_max(max)
dsl_source_set_num_in_use_max(20)
#print(dsl_source_get_num_in_use_max())

##
## dsl_gie_primary_new()
##
_dsl.dsl_gie_primary_new.argtypes = [c_wchar_p, c_wchar_p, c_wchar_p, c_uint]
_dsl.dsl_gie_primary_new.restype = c_uint
def dsl_gie_primary_new(name, infer_config_file, model_engine_file, interval):
    global _dsl
    result = _dsl.dsl_gie_primary_new(name, infer_config_file, model_engine_file, interval)
    return int(result)
#print(dsl_gie_primary_new("primary-gie", "../../test/configs/config_infer_primary_nano.txt", 
#    "../../test/models/Primary_Detector_Nano/resnet10.caffemodel", 0, 0))

##
## dsl_gie_primary_batch_meta_handler_add()
##
_dsl.dsl_gie_primary_batch_meta_handler_add.argtypes = [c_wchar_p, c_uint, DSL_META_BATCH_HANDLER, c_void_p]
_dsl.dsl_gie_primary_batch_meta_handler_add.restype = c_uint
def dsl_gie_primary_batch_meta_handler_add(name, pad, handler, user_data):
    global _dsl
    meta_handler = DSL_META_BATCH_HANDLER(handler)
    result = _dsl.dsl_gie_primary_batch_meta_handler_add(name, pad, meta_handler, user_data)
    return int(result)

#def mb_handler(buffer, user_data):
#    print(buffer)
#    print(user_data)
    
#print(dsl_gie_primary_new("primary-gie", "../../test/configs/config_infer_primary_nano.txt", 
#    "../../test/models/Primary_Detector_Nano/resnet10.caffemodel", 0, 0))
#print(dsl_gie_primary_batch_meta_handler_add("ktl-tracker", mb_handler, None))

##
## dsl_gie_primary_batch_meta_handler_remove()
##
_dsl.dsl_gie_primary_batch_meta_handler_remove.argtypes = [c_wchar_p, c_uint]
_dsl.dsl_gie_primary_batch_meta_handler_remove.restype = c_uint
def dsl_gie_primary_batch_meta_handler_remove(name, pad):
    global _dsl
    result = _dsl.dsl_gie_primary_batch_meta_handler_remove(name, pad)
    return int(result)
#print(dsl_gie_primary_batch_meta_handler_remove("ktl-tracker"))


##
## dsl_gie_secondary_new()
##
_dsl.dsl_gie_secondary_new.argtypes = [c_wchar_p, c_wchar_p, c_wchar_p, c_wchar_p]
_dsl.dsl_gie_secondary_new.restype = c_uint
def dsl_gie_secondary_new(name, infer_config_file, model_engine_file, infer_on_gie_name):
    global _dsl
    result = _dsl.dsl_gie_secondary_new(name, infer_config_file, model_engine_file, infer_on_gie_name)
    return int(result)

##
## dsl_tracker_ktl_new()
##
_dsl.dsl_tracker_ktl_new.argtypes = [c_wchar_p, c_uint, c_uint]
_dsl.dsl_tracker_ktl_new.restype = c_uint
def dsl_tracker_ktl_new(name, width, height):
    global _dsl
    result = _dsl.dsl_tracker_ktl_new(name, width, height)
    return int(result)
#print(dsl_tracker_ktl_new("ktl-tracker", 300, 150))

##
## dsl_tracker_iou_new()
##
_dsl.dsl_tracker_iou_new.argtypes = [c_wchar_p, c_wchar_p, c_uint, c_uint]
_dsl.dsl_tracker_iou_new.restype = c_uint
def dsl_tracker_iou_new(name, config_file, width, height):
    global _dsl
    result = _dsl.dsl_tracker_iou_new(name, config_file, width, height)
    return int(result)
#print(dsl_tracker_iou_new("iou-tracker", "./test/configs/iou_config.txt", 300, 150))

##
## dsl_tracker_max_dimensions_get()
##
_dsl.dsl_tracker_max_dimensions_get.argtypes = [c_wchar_p, POINTER(c_uint), POINTER(c_uint)]
_dsl.dsl_tracker_max_dimensions_get.restype = c_uint
def dsl_tracker_max_dimensions_get(name):
    global _dsl
    max_width = c_uint(0)
    max_height = c_uint(0)
    result = _dsl.dsl_tracker_max_dimensions_get(name, DSL_UINT_P(max_width), DSL_UINT_P(max_height))
    return int(result), max_width.value, max_height.value 

#print(dsl_tracker_ktl_new("ktl-tracker", 300, 150))
#print(dsl_tracker_max_dimensions_get("ktl-tracker",))

##
## dsl_tracker_max_dimensions_set()
##
_dsl.dsl_tracker_max_dimensions_set.argtypes = [c_wchar_p, c_uint, c_uint]
_dsl.dsl_tracker_max_dimensions_set.restype = c_uint
def dsl_tracker_max_dimensions_set(name, max_width, max_height):
    global _dsl
    result = _dsl.dsl_tracker_max_dimensions_set(name, max_width, max_height)
    return int(result)

##
## dsl_tracker_batch_meta_handler_add()
##
_dsl.dsl_tracker_batch_meta_handler_add.argtypes = [c_wchar_p, c_uint, DSL_META_BATCH_HANDLER, c_void_p]
_dsl.dsl_tracker_batch_meta_handler_add.restype = c_uint
def dsl_tracker_batch_meta_handler_add(name, pad, handler, user_data):
    global _dsl
    meta_handler = DSL_META_BATCH_HANDLER(handler)
    result = _dsl.dsl_tracker_batch_meta_handler_add(name, pad, meta_handler, user_data)
    return int(result)

#def mb_handler(buffer, user_data):
#    print(buffer)
#    print(user_data)
    
#print(dsl_tracker_ktl_new("ktl-tracker", 300, 150))
#print(dsl_tracker_batch_meta_handler_add("ktl-tracker", mb_handler, None))

##
## dsl_tracker_batch_meta_handler_remove()
##
_dsl.dsl_tracker_batch_meta_handler_remove.argtypes = [c_wchar_p, c_uint]
_dsl.dsl_tracker_batch_meta_handler_remove.restype = c_uint
def dsl_tracker_batch_meta_handler_remove(name, pad):
    global _dsl
    result = _dsl.dsl_tracker_batch_meta_handler_remove(name, pad)
    return int(result)
#print(dsl_tracker_batch_meta_handler_remove("ktl-tracker"))

##
## dsl_osd_new()
##
_dsl.dsl_osd_new.argtypes = [c_wchar_p, c_bool]
_dsl.dsl_osd_new.restype = c_uint
def dsl_osd_new(name, is_clock_enabled):
    global _dsl
    result =_dsl.dsl_osd_new(name, is_clock_enabled)
    return int(result)
#print(dsl_osd_new("on-screen-display", False))

##
## dsl_osd_batch_meta_handler_add()
##
_dsl.dsl_osd_batch_meta_handler_add.argtypes = [c_wchar_p, c_uint, DSL_META_BATCH_HANDLER, c_void_p]
_dsl.dsl_osd_batch_meta_handler_add.restype = c_uint
def dsl_osd_batch_meta_handler_add(name, pad, handler, user_data):
    global _dsl
    meta_handler = DSL_META_BATCH_HANDLER(handler)
    result = _dsl.dsl_osd_batch_meta_handler_add(name, pad, meta_handler, user_data)
    return int(result)

#def mb_handler(buffer, user_data):
#    print(buffer)
#    print(user_data)
    
#print(dsl_osd_new("on-screen-display", True))
#print(dsl_osd_batch_meta_handler_add("on-screen-display", mb_handler, None))

##
## dsl_osd_batch_meta_handler_remove()
##
_dsl.dsl_osd_batch_meta_handler_remove.argtypes = [c_wchar_p, c_uint]
_dsl.dsl_osd_batch_meta_handler_remove.restype = c_uint
def dsl_osd_batch_meta_handler_remove(name, pad):
    global _dsl
    result = _dsl.dsl_osd_batch_meta_handler_remove(name, pad)
    return int(result)
#print(dsl_osd_batch_meta_handler_remove("on-screen-display"))

##
## dsl_tiler_new()
##
_dsl.dsl_tiler_new.argtypes = [c_wchar_p, c_uint, c_uint]
_dsl.dsl_tiler_new.restype = c_uint
def dsl_tiler_new(name, width, height):
    global _dsl
    result =_dsl.dsl_tiler_new(name, width, height)
    return int(result)
#print(dsl_tiler_new("tiler", 1280, 720))
